WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
20357
Patch to fix QtWebKit crash
https://bugs.webkit.org/show_bug.cgi?id=20357
Summary
Patch to fix QtWebKit crash
Urs Wolfer
Reported
2008-08-12 04:51:08 PDT
There is a crash in QWebPage in case contextMenuEvent has been overwritten because context menu has the view as parent and thus is deleted too early.
Attachments
Patch to fix the crash together with a testcase for this crash
(2.20 KB, patch)
2008-08-12 04:53 PDT
,
Urs Wolfer
hausmann
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Urs Wolfer
Comment 1
2008-08-12 04:53:09 PDT
Created
attachment 22745
[details]
Patch to fix the crash together with a testcase for this crash
Simon Hausmann
Comment 2
2008-08-12 04:55:21 PDT
Comment on
attachment 22745
[details]
Patch to fix the crash together with a testcase for this crash Looks good to me
Simon Hausmann
Comment 3
2008-08-12 04:59:52 PDT
Landed in
r35681
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug