2008-08-12  Urs Wolfer  <uwolfer@kde.org>

Reviewed by Simon.

        https://bugs.webkit.org/show_bug.cgi?id=20357

        Fix crash in QWebPage in case contextMenuEvent has been overwritten
        because context menu has the view as parent and thus is deleted too early.

        Add testcase for this crash.

Canonical link: https://commits.webkit.org/28090@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@35681 268f45cc-cd09-0410-ab3c-d52691b4dbfc