WebKit/qt/Api/qwebpage_p.h
@@ -145,7 +145,7 @@ public:
     QSize viewportSize;
     QWebHistory history;
     QWebHitTestResult hitTestResult;
-    QMenu *currentContextMenu;
+    QPointer<QMenu> currentContextMenu;
     QWebSettings *settings;
     QPalette palette;
     bool editable;
